[package]
name = "xml-http-response"
version = "0.1.0"
edition = "2021"

[dependencies]
xjbutil = { version="0.8", default-features=false, features=[
    "either",
    "liberty",
    "minhttpd",
    "std-ext"
] }
minidom = "0.15"
urlencoding = "2"
toml = "0.5"
serde = { version="1", features=["derive"] }
